Tue Sep 25 15:22:15 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * ace/OS_NS_ctype.h:
        * ace/OS_NS_ctype.inl:

          Implement a slightly dumb version of ace_towlower when towlower is
          not available from the system libraries.  Previously, ace_towlower
          would not be available if ACE_LACKS_TOWLOWER was defined.

        * ace/OS_NS_string.cpp:

          Replaced the ACE_OS::strtok_r_emulation() implementation, when
          ACE_HAS_WCHAR and ACE_LACKS_WCSTOK are defined, with a public
          domain implementation (converted to work with wide characters and
          c++).  It did not compile as previously implemented.

Mon Sep 24 18:58:01 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * ace/ATM_Acceptor.inl:
        * ace/IOStream_T.inl:
        * ace/OS_NS_dlfcn.inl:
        * ace/OS_NS_netdb.inl:
        * ace/OS_NS_sys_mman.inl:
        * ace/OS_NS_sys_stat.inl:

          Fixed ACE_OS fuzz warnings. Use ACE_OS calls instead of raw OS functions
          where possible. If fuzz detected a false-positive, then disable
          the ACE_OS fuzz check for that section of the code.

Mon Sep 24 18:44:08 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_unistd.inl (swab):

          Added missing copyright notice for swab() implementation in
          "ACE_LACKS_SWAB" block of code.  That implementation falls under
          the BSD license.

Mon Sep 24 15:51:14 UTC 2007  Steve Huston  <shuston@riverace.com>

        * bin/PerlACE/ProcessLVRT.pm: Clarify that the Net-Telnet Perl module
          is required to use this module.

Mon Sep 24 07:47:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/README:
        * ace/TSS_T.h:
          Removed ACE_HAS_BROKEN_CONVERSIONS usage

Sat Sep 22 13:39:35 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-hpux-11.00.h: Removed ACE_HAS_BROKEN_CONVERSIONS; thanks